[package]
name = "tg-bot-ws-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version = "0.3.6", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
pretty_env_logger = "0.5"
env_logger = "0.10.0"
log = "0.4.20"
tungstenite = "0.20.1"
tokio-stream = "0.1.14"
reqwest = { version = "0.11", features = ["multipart"] }
